[gd_scene format=3 uid="uid://dxpo0yea3rw7f"]

[ext_resource type="Script" uid="uid://c4oiush7vlfij" path="res://scenes/origin_viewport.gd" id="1_ixokh"]
[ext_resource type="PackedScene" uid="uid://bu60hcp1y8o6" path="res://scenes/grid_manager.tscn" id="2_o0rck"]

[node name="OriginViewportController" type="Node2D" unique_id=1737952139]
script = ExtResource("1_ixokh")

[node name="OriginViewportContainer" type="SubViewportContainer" parent="." unique_id=415882657]
offset_top = -1046.0
offset_right = 834.0
offset_bottom = -4.0
stretch = true

[node name="OriginViewport" type="SubViewport" parent="OriginViewportContainer" unique_id=1659745886]
disable_3d = true
handle_input_locally = false
size = Vector2i(834, 1042)
render_target_update_mode = 4

[node name="GridManager" parent="OriginViewportContainer/OriginViewport" unique_id=1720207153 instance=ExtResource("2_o0rck")]

[node name="VertViewportOrganizer" type="VBoxContainer" parent="." unique_id=118837462]
offset_right = 1153.0
offset_bottom = 653.0
alignment = 1

[node name="TopHorViewportOrganizer" type="HBoxContainer" parent="VertViewportOrganizer" unique_id=1359933730]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BotHorViewportOrganizer" type="HBoxContainer" parent="VertViewportOrganizer" unique_id=1891703897]
visible = false
layout_mode = 2
alignment = 1
